# oc-dashboard

./: README.md  pyproject.toml  pyrightconfig.json
skills/kanban-board/: SKILL.md
src/oc_dashboard/: app.py  app.tcss  cli.py  core.py  data.py  kanban.py  kanban_screen.py  opencode.py
tests/: test_core.py  test_opencode.py
